--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-    "extends": "standard",
-    "env": {
-        "browser": true,
-        "es6": true
-    }
+  "env": {
+    "browser": true,
+    "jquery": true
+  },
+  "extends": "airbnb-base",
+  "parser": "babel-eslint"
 }
