--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "commit": "node ./node_modules/cz-customizable/standalone.js",
     "scss": "node-sass -w --include-path scss scss/ -o css/ --output-style compressed",
     "prefix": "postcss --use autoprefixer --no-map css/ -d css/",
-    "gulp": "gulp browserify",
-    "uncss": "grunt default"
+    "build": "webpack --mode production",
+    "dev": "webpack -w --mode development"
   },
   "repository": {
     "type": "git",
@@ -21,19 +21,30 @@
   },
   "homepage": "https://github.com/yoshi1125hisa/coding-template#readme",
   "dependencies": {
-    "grunt": "^1.0.4"
+    "@babel/polyfill": "^7.2.5",
+    "ress": "^1.2.2"
   },
   "devDependencies": {
     "cz-customizable": "6.2.0",
-    "autoprefixer": "9.6.1",
-    "grunt-contrib-cssmin": "3.0.0",
-    "grunt-uncss": "0.8.6",
-    "node-sass": "4.12.0",
-    "node-sass-import": "2.0.1",
-    "npm-run-all": "4.1.5",
-    "postcss": "7.0.17",
-    "postcss-cli": "6.1.3",
-    "postcss-import": "12.0.1",
-    "postcss-loader": "3.0.0"
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "autoprefixer": "^9.4.8",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "browser-sync": "^2.26.5",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "file-loader": "^3.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   }
 }
