--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "commit": "node ./node_modules/cz-customizable/standalone.js",
-    "scss": "node-sass -w --include-path scss scss/ -o css/ --output-style compressed",
-    "prefix": "postcss --use autoprefixer --no-map css/ -d css/",
-    "build": "webpack --mode production",
-    "dev": "webpack -w --mode development"
+    "watch:build": "webpack -w",
+    "watch:server": "browser-sync start --config bs-config.js",
+    "watch": "npm-run-all -p watch:*",
+    "sync": "browser-sync start --config bs-config.js & webpack --watch -d"
   },
   "repository": {
     "type": "git",
@@ -20,31 +20,19 @@
     "url": "https://github.com/yoshi1125hisa/coding-template/issues"
   },
   "homepage": "https://github.com/yoshi1125hisa/coding-template#readme",
-  "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "ress": "^1.2.2"
-  },
   "devDependencies": {
-    "cz-customizable": "6.2.0",
-    "@babel/core": "7.5.5",
-    "@babel/preset-env": "7.5.5",
-    "autoprefixer": "9.6.1",
-    "babel-eslint": "10.0.3",
-    "babel-loader": "8.0.6",
-    "browser-sync": "2.26.7",
-    "browser-sync-webpack-plugin": "2.2.2",
-    "css-loader": "2.1.1",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb-base": "13.2.0",
-    "eslint-loader": "2.2.1",
-    "eslint-plugin-import": "2.18.2",
-    "file-loader": "3.0.1",
-    "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "4.12.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "postcss-loader": "3.0.0",
-    "sass-loader": "7.3.1",
-    "webpack": "4.39.3",
-    "webpack-cli": "3.3.7"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "bower": "^1.8.0",
+    "browser-sync": "^2.18.8",
+    "css-loader": "^3.2.0",
+    "extglob": "^1.1.0",
+    "node-sass": "^4.5.2",
+    "npm-run-all": "^4.0.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
