--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "scripts": {
     "commit": "node ./node_modules/cz-customizable/standalone.js",
-    "watch:build": "webpack -w",
-    "watch:server": "browser-sync start --config bs-config.js",
-    "watch": "npm-run-all -p watch:*",
-    "sync": "browser-sync start --config bs-config.js & webpack --watch -d"
+    "start": "npx gulp"
   },
   "repository": {
     "type": "git",
@@ -21,18 +18,13 @@
   },
   "homepage": "https://github.com/yoshi1125hisa/coding-template#readme",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "bower": "^1.8.0",
-    "browser-sync": "^2.18.8",
-    "css-loader": "^3.2.0",
-    "extglob": "^1.1.0",
-    "node-sass": "^4.5.2",
-    "npm-run-all": "^4.0.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.2",
+    "postcss-cssnext": "^3.1.0"
   }
 }
