--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-sync": "2.26.7",
     "gulp": "4.0.2",
     "gulp-babel": "8.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-postcss": "8.0.0",
     "gulp-sass": "4.0.2",
     "postcss-cssnext": "3.1.0"
