--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "commit": "node ./node_modules/cz-customizable/standalone.js",
-    "start": "gulp"
+    "start": "gulp",
+    "production": "mkdir dist dist/img; cp src/img/* dist/img/"
   },
   "repository": {
     "type": "git",
