--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "coding-template",
   "version": "1.0.0",
   "description": "coding template for html and scss",
-  "main": "index.js",
+  "main": "src/js/index.js",
   "scripts": {
     "commit": "node ./node_modules/cz-customizable/standalone.js",
-    "start": "gulp",
-    "production": "mkdir dist dist/img; cp src/img/* dist/img/"
+    "dev": "webpack-dev-server",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -19,22 +19,39 @@
   },
   "homepage": "https://github.com/yoshi1125hisa/coding-template#readme",
   "devDependencies": {
-    "@babel/core": "7.6.2",
-    "@babel/preset-env": "7.6.2",
-    "browser-sync": "2.26.7",
-    "gulp": "4.0.2",
-    "gulp-babel": "8.0.0",
-    "gulp-changed": "4.0.1",
-    "gulp-clean-css": "4.2.0",
-    "gulp-imagemin": "6.1.0",
-    "gulp-postcss": "8.0.0",
-    "gulp-sass": "4.0.2",
-    "gulp-svgmin": "2.2.0",
-    "imagemin-jpeg-recompress": "6.0.0",
-    "imagemin-pngquant": "8.0.0",
-    "postcss-cssnext": "3.1.0"
+    "@babel/core": "^7.0.0",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.2",
+    "copy-webpack-plugin": "^4.6.0",
+    "core-js": "^3.0.1",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "imagemin-webpack-plugin": "^2.3.0",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7"
   },
-  "dependencies": {
-    "gulp-htmlmin": "^5.0.1"
+  "eslintConfig": {
+    "extends": "airbnb",
+    "env": {
+      "browser": true,
+      "node": true
+    }
   }
 }
