--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,7 @@
       "@babel/preset-env",
       {
         "useBuiltIns": "usage",
-        "corejs": "3",
-        "targets": {
-          "browsers": ["last 2 versions", "> 3% in JP"]
-        }
+        "corejs": "3"
       }
     ]
   ]
