--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,14 @@
 {
-  "extends": [
-    "config:base"
-  ],
+  "extends": ["config:base"],
+  "labels": ["renovate"],
+  "major": {
+    "groupName": "all major dependencies"
+  },
   "minor": {
-    "groupName": "all dependencies"
+    "groupName": "all minor dependencies"
+  },
+  "patch": {
+    "automerge": true,
+    "groupName": "all patch dependencies"
   }
 }
