--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/js/index.js",
   "scripts": {
     "commit": "node ./node_modules/cz-customizable/standalone.js",
-    "dev": "webpack-dev-server",
-    "build": "webpack --mode production"
+    "build": "gulp build",
+    "serve": "gulp serve",
+    "watch": "gulp watch"
   },
   "repository": {
     "type": "git",
@@ -19,33 +20,24 @@
   },
   "homepage": "https://github.com/yoshi1125hisa/coding-template#readme",
   "devDependencies": {
-    "@babel/core": "7.7.2",
-    "@babel/polyfill": "7.7.0",
-    "@babel/preset-env": "7.7.1",
-    "autoprefixer": "9.7.2",
-    "babel-loader": "8.0.6",
-    "copy-webpack-plugin": "5.0.5",
-    "core-js": "3.4.1",
-    "css-loader": "3.2.0",
-    "eslint": "6.6.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.16.0",
-    "file-loader": "4.2.0",
-    "html-webpack-plugin": "3.2.0",
-    "imagemin-webpack-plugin": "2.4.2",
-    "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "4.13.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "postcss-loader": "3.0.0",
-    "sass-loader": "8.0.0",
-    "style-loader": "1.0.0",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "url-loader": "2.2.0",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0"
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2016": "^6.0.11",
+    "babel-register": "^6.16.3",
+    "babelify": "^7.3.0",
+    "browser-sync": "^2.13.0",
+    "browserify": "^13.0.1",
+    "cz-conventional-changelog": "^3.0.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -53,5 +45,11 @@
       "browser": true,
       "node": true
     }
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "es2016"
+    ]
   }
 }
