--- a/package.json
+++ b/package.json
@@ -20,24 +20,20 @@
   },
   "homepage": "https://github.com/yoshi1125hisa/coding-template#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/register": "^7.7.0",
+    "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
-    "browserify": "^16.5.0",
-    "cz-conventional-changelog": "^3.0.2",
+    "cz-customizable": "^6.2.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-load-plugins": "^2.0.1",
-    "gulp-plumber": "^1.2.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1"
+    "gulp-uglify": "^3.0.2"
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -45,11 +41,5 @@
       "browser": true,
       "node": true
     }
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "es2016"
-    ]
   }
 }
