--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/js/index.js",
   "scripts": {
     "commit": "node ./node_modules/cz-customizable/standalone.js",
-    "start": "gulp"
+    "start": "gulp",
     "build": "gulp build"
   },
   "repository": {
