--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,6 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{html,ejs,scss,css,js,svg}]
+[*.{html,ejs,scss,css,js,jsx,ts,json,svg}]
 indent_style = space
 indent_size = 2
