✨(env): Add auto merge setting

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
     "groupName": "all major dependencies"
   },
   "minor": {
+    "automerge": true,
     "groupName": "all minor dependencies"
   },
   "patch": {
